--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   selenium-job:
-    runs-on: ubuntu-22.04  # Explicitly specify Ubuntu version
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
@@ -24,6 +24,10 @@ jobs:
           sudo apt-get install -y google-chrome-stable
           CHROME_VERSION=$(google-chrome --version | grep -oP '\\d+\\.\\d+\\.\\d+')
           CHROME_DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*}")
+          if [ -z "$CHROME_DRIVER_VERSION" ]; then
+            echo "Error: ChromeDriver version matching Chrome $CHROME_VERSION not found." >&2
+            exit 1
+          fi
           wget https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
