--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   selenium-job:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -18,34 +18,21 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install Specific Chrome and ChromeDriver
-        run: |
-          # Install necessary tools
-          sudo apt-get update
-          sudo apt-get install -y wget unzip || true  # Ignore minor errors during this step
-          
-          # Install a specific version of Chrome
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y || true
-
-          # Extract Chrome version and install the matching ChromeDriver version
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\\d+\\.\\d+\\.\\d+')
-          CHROME_DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*}")
-          if [ -z "$CHROME_DRIVER_VERSION" ]; then
-            echo "Error: Failed to retrieve ChromeDriver version." >&2
-            exit 1
-          fi
-
-          echo "Installing ChromeDriver version $CHROME_DRIVER_VERSION for Chrome $CHROME_VERSION..."
-          wget https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-
       - name: Install Python Dependencies
         run: |
           pip install selenium
 
+      - name: Use Preinstalled ChromeDriver
+        run: |
+          echo "Using preinstalled ChromeDriver and Chrome"
+          echo "Chrome version:"
+          google-chrome --version
+          echo "ChromeDriver version:"
+          chromedriver --version
+
       - name: Run Selenium script
+        env:
+          PATH: /usr/local/bin:$PATH
         run: python selenium_script.py
 
       - name: Upload results
