--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Upload results
         uses: actions/upload-artifact@v3
         with:
-          name: chapter-links
-          path: chapter_links.json  # Updated file name
+          name: chapter-links-with-full-url
+          path: chapter_links_with_full_url.json  # Updated file name
